# research-integrity-gym

./: .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  app.py  baseline.py  evaluate_lora.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup_openenv.py  setup_tests.py  test_grader_ranges.py  test_structured_output.py
api/: app.py  routes.py
data/datasets/: task2_readmission.csv  task3_clinical_trial.csv
data/ground_truth/: task1_ground_truth.json  task2_ground_truth.json  task3_ground_truth.json
docs/: HFBlogPost.md
env/: __init__.py  environment.py  models.py  reward.py  state.py
graders/: __init__.py  grader1.py  grader2.py  grader3.py  grader4.py  grader5.py
peerguard_lora_final/: README.md  adapter_config.json  adapter_model.safetensors
server/: app.py
tasks/: __init__.py  base.py  task1_methodology_audit.py  task2_replication.py  task3_claim_verify.py  task4_citation_check.py  task5_fda_approval.py
tests/: __init__.py  test_graders.py
