[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-integrity-gym"
version = "1.0.0"
description = "OpenEnv benchmark for AI agents evaluating scientific research integrity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Research Integrity Gym Team"}
]
keywords = ["openenv", "benchmark", "research-integrity", "ai-agents", "scientific-method"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "openai>=1.30.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Nexus18/research-integrity-gym"
Repository = "https://github.com/Bhavishya011/research-integrity-gym"

[project.scripts]
inference = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "env*", "tasks*", "graders*", "data*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
